dns/dns-perf-4scenario-workdir/manifests/kube-dns-cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "dns-perf-fqdn-policy"
spec:
  endpointSelector:
    matchLabels:
      app: dns-perf-client
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
       - matchPattern: "*"
